Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4970

Test failure sanity-lfsck test_14: ls should success

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.7.0
    • Lustre 2.6.0
    • None
    • 3
    • 13760

      This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>

      This issue relates to the following test suite run:
      http://maloo.whamcloud.com/test_sets/33c0eb0c-cd6b-11e3-b548-52540035b04c
      https://maloo.whamcloud.com/test_sets/1ca115d8-bb68-11e3-8ec1-52540035b04c
      https://maloo.whamcloud.com/test_sets/beed7496-c0a2-11e3-b5ea-52540035b04c

      The sub-test test_14 failed with the following error:

      'ls' should success after layout LFSCK repairing
      ls: cannot access /mnt/lustre/d14.sanity-lfsck/f46: Cannot allocate memory
      ls: cannot access /mnt/lustre/d14.sanity-lfsck/f32: Cannot allocate memory
      sanity-lfsck test_14: @@@@@@ FAIL: (5) ls should success.

      Info required for matching: sanity-lfsck 14

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: